--- a/src/views/example.ejs
+++ b/src/views/example.ejs
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    hello wourd
-    <script src="app.js"></script>
-
+    <h1>Hello ejs tow</h1>
+    <div>
+        <img class="testimg" src="/images/menu-momo.jpg" alt="">
+    </div>
 </body>
 
 </html>
